--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                                 <span>Tell a friend, share on Facebook. We will begin reviewing applications January 2017.</span>
                             </div>
                             <div class="promo-btn">
-                                <a href="#" class="btn btn-medium btn-dark-solid  text-uppercase">APPLY</a>
+                                <a href="http://goo.gl/forms/Ch9ZQLqw3Ry2HFjl2" class="btn btn-medium btn-dark-solid  text-uppercase">APPLY</a>
                             </div>
                         </div>
                         <!--promo-->
@@ -516,7 +516,7 @@
                         <h1 class="text-uppercase light-txt">You can support our cause by volunteering to mentor a high school graduate that is just starting to learn Computer Science.</h1>
 
                         <div class="m-top-50 inline-block">
-                            <a href="#" class="btn btn-medium  btn-theme-color light-hover" style="background: #f70484;">Sign up as a Volunteer</a>
+                            <a href="http://goo.gl/forms/zTRjiNN4yjLOLKMI2" class="btn btn-medium  btn-theme-color light-hover" style="background: #f70484;">Sign up as a Volunteer</a>
                         </div>
                     </div>
 
