--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                             </div>
                             <div class="item">
                                 <div class="tst-thumb">
-                                    <img class="circle" src="img/post/a1.png" alt="">
+                                    <img class="circle" src="img/post/moses.png" alt="">
                                 </div>
                                 <div class="content">
                                     <div class="testimonial-meta">
