--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="corporate, creative, general, portfolio, photography, blog, e-commerce, shop, product, gallery, retina, responsive">
-    <meta name="author" content="Mosaddek">
+    <meta name="description" content="Making Computer Science Available to Everybody">
+    <meta name="author" content="M-Soma Institute">
 
     <!--favicon icon-->
     <link rel="icon" type="image/png" href="img/favicon.png">
@@ -52,7 +52,7 @@
 
                     <!--logo start-->
                     <a href="index.html" class="logo-brand">
-                        <img class="retina" src="img/logo-dark.png" alt=""/>
+                        <img class="retina" src="img/logo-dark.png" alt=""style="max-width: 100%;"/>
                     </a>
                     <!--logo end-->
 
